# NehAlgorithm

./: CMakeLists.txt  README.md  main.cpp
include/: functionsOfAlg.h  job.h
src/: functionsOfAlg.cpp  job.cpp
